[gd_scene load_steps=16 format=3 uid="uid://mxrnxkw3d67l"]

[ext_resource type="Script" uid="uid://b7s1cvb33ytql" path="res://scripts/player.gd" id="1_3f0ma"]
[ext_resource type="Texture2D" uid="uid://ci2jec4miq1n3" path="res://assets/textures/dev/grids/Dark/texture_07.png" id="1_loqtw"]
[ext_resource type="Texture2D" uid="uid://br3d3ghmmwhpv" path="res://assets/hdris/kloofendal_48d_partly_cloudy_puresky_2k.hdr" id="2_3f0ma"]
[ext_resource type="Script" uid="uid://dr41gukn02fs5" path="res://scence/camera_3d.gd" id="2_6psia"]
[ext_resource type="Texture2D" uid="uid://b0fx6fupesq2t" path="res://assets/textures/dev/grids/Green/texture_01.png" id="3_6psia"]
[ext_resource type="PackedScene" uid="uid://d114ivuhyldp7" path="res://Temple_Sketch_0506094146_generate.glb" id="7_lhauw"]
[ext_resource type="PackedScene" uid="uid://bjeb4e71hxuwd" path="res://scence/Door.tscn" id="7_u4yjv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j6sff"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c8hlg"]
albedo_texture = ExtResource("3_6psia")
metallic = 0.24
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aqk2v"]
albedo_texture = ExtResource("1_loqtw")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u4yjv"]
albedo_color = Color(0.0326666, 0.49, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lhauw"]
albedo_color = Color(0.53, 0.300333, 0, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_036b0"]
panorama = ExtResource("2_3f0ma")

[sub_resource type="Sky" id="Sky_f3sb7"]
sky_material = SubResource("PanoramaSkyMaterial_036b0")

[sub_resource type="Environment" id="Environment_fj7yv"]
background_mode = 2
sky = SubResource("Sky_f3sb7")
tonemap_mode = 2
glow_enabled = true

[node name="world" type="Node3D"]

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38811, 0)
script = ExtResource("1_3f0ma")

[node name="playerCollider" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_j6sff")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="player/head"]
fov = 68.2
script = ExtResource("2_6psia")

[node name="RayCastHead" type="RayCast3D" parent="player/head/Camera3D"]
target_position = Vector3(0, 0, -3)
collide_with_areas = true

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="player"]

[node name="RayCastFeet" type="RayCast3D" parent="player"]
target_position = Vector3(0, -0.5, 0)

[node name="stage" type="Node3D" parent="."]
physics_interpolation_mode = 1

[node name="misc" type="Node3D" parent="stage"]

[node name="olTestBox" type="CSGBox3D" parent="stage/misc"]
transform = Transform3D(0.999632, -0.0271191, 0, 0.0271191, 0.999632, 0, 0, 0, 1, 1.034, 2.56511, -3.14837)
material_override = SubResource("StandardMaterial3D_c8hlg")
use_collision = true
size = Vector3(4, 5, 2)

[node name="floorbox" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.236525, -0.552933, -0.249606)
use_collision = true
size = Vector3(40, 1, 40)
material = SubResource("StandardMaterial3D_aqk2v")
metadata/surfaceType = "default"

[node name="debugLabel" type="RichTextLabel" parent="stage"]
modulate = Color(0.209046, 0.648167, 0.502491, 1)
clip_contents = false
offset_right = 314.0
offset_bottom = 28.0
scale = Vector2(1, 0.914286)
text = "  Virtual Musem indevmode"
autowrap_mode = 0

[node name="Grass" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.4303, -0.00773048, 0.000366211)
use_collision = true
size = Vector3(5, 0.1, 5)
material = SubResource("StandardMaterial3D_u4yjv")
metadata/surfaceType = "grass"

[node name="Dirt" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.4201, 9.53674e-07, -4.99372)
use_collision = true
size = Vector3(5, 0.1, 5)
material = SubResource("StandardMaterial3D_lhauw")
metadata/surfaceType = "dirt"

[node name="env" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0464887, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 4.85595, -1.93457)
light_energy = 1.162
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_fj7yv")

[node name="Door2" parent="." instance=ExtResource("7_u4yjv")]
transform = Transform3D(1.17072, 0, 0, 0, 2.45759, 0, 0, 0, 1, 0.186242, 1.03183, 7.22895)

[node name="Door3" parent="." instance=ExtResource("7_u4yjv")]
transform = Transform3D(1.17072, 0, 0, 0, 2.45759, 0, 0, 0, 1, 1.34529, 1.03183, 7.22895)

[node name="Temple_Sketch_0506094146_generate" parent="." instance=ExtResource("7_lhauw")]
transform = Transform3D(9.97386, 0, 0, 0, 9.97386, 0, 0, 0, 9.97386, 1.10974, 3.4157, 13.2221)
